--- a/app/views/contact_pages/new.html.erb
+++ b/app/views/contact_pages/new.html.erb
@@ -1,19 +1,8 @@
-<h1>New contact_page</h1>
+here I am
 
-<% form_for(@contact_page) do |f| %>
-  <%= f.error_messages %>
+<div id="node1"></div><!-- #node1 end -->
+<div id="node2"></div><!-- #node2 end -->
+<div id="node3">contact</div><!-- #node3 end -->
 
-  <p>
-    <%= f.label :title %><br />
-    <%= f.text_field :title %>
-  </p>
-  <p>
-    <%= f.label :body %><br />
-    <%= f.text_area :body %>
-  </p>
-  <p>
-    <%= f.submit 'Create' %>
-  </p>
-<% end %>
 
-<%= link_to 'Back', contact_pages_path %>
+
