--- a/app/views/credits/edit.html.erb
+++ b/app/views/credits/edit.html.erb
@@ -1,10 +1,6 @@
+<h1>Editing credit</h1>
 
-
-
-
-<h1>New home_page</h1>
-
-<% form_for(@home_page) do |f| %>
+<% form_for(@credit) do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -16,8 +12,9 @@
     <%= f.text_area :body %>
   </p>
   <p>
-    <%= f.submit 'Create' %>
+    <%= f.submit 'Update' %>
   </p>
 <% end %>
 
-<%= link_to 'Back', home_pages_path %>
+<%= link_to 'Show', @credit %> |
+<%= link_to 'Back', credits_path %>
