--- a/app/views/credits/new.html.erb
+++ b/app/views/credits/new.html.erb
@@ -1,10 +1,6 @@
+<h1>New credit</h1>
 
-
-
-
-<h1>New home_page</h1>
-
-<% form_for(@home_page) do |f| %>
+<% form_for(@credit) do |f| %>
   <%= f.error_messages %>
 
   <p>
@@ -20,4 +16,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', home_pages_path %>
+<%= link_to 'Back', credits_path %>
