fix ACMMCA name

--- a/app/views/credits/index.html.erb
+++ b/app/views/credits/index.html.erb
@@ -5,7 +5,7 @@
 
 
     <li>  <img src="/images/tick.png" />
-      Copyright (c) <%=Time.now.strftime("%Y") %>  ACMMTPA. All rights reserved. Developed by <a href="http://chasmaninfo.heroku.com"> Charles Magid.   </a>  In conjunction with Complex IT LLC using all open source tools.
+      Copyright (c) <%=Time.now.strftime("%Y") %>  ACMMCA. All rights reserved. Developed by <a href="http://chasmaninfo.heroku.com"> Charles Magid.   </a>  In conjunction with Complex IT LLC using all open source tools.
 
     </li>
 
