--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -121,7 +121,7 @@
 	<p>
 	  <li>  
 	    <center>
-	      Copyright (c) <%=Time.now.strftime("%Y") %>  ACMMTPA. All rights reserved.  Developed by Charles Magid.  Developed with all open source tools
+	      Copyright (c) <%=Time.now.strftime("%Y") %>  ACMMCA. All rights reserved.  Developed by Charles Magid.  Developed with all open source tools
 	    </center>
 	  </li>
 	</p>
