--- a/app/views/contact_pages/index.html.erb
+++ b/app/views/contact_pages/index.html.erb
@@ -1,6 +1,6 @@
 <div class="">
   
-  <b>Katherine Gorry-Hines</b>
+  <b>Katherine Gorry-Hines</b> <br />
   katherine@complexitllc.com <br />
   781.879.0075 main <br />
   339.970.9464 <br />
