--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 	<div id="menu">
 		<ul>
 			<li class="active"><a href="/home_pages">Home</a></li>
-			<li><a href="#">About Us</a></li>
+			<li><a href="/about_us">About Us</a></li>
 			<li><a href="#">Products</a></li>
 			<li><a href="#">Services</a></li>
 			<li><a href="/contact_pages">Contact Us</a></li>
@@ -83,15 +83,22 @@
 					</form>
 				</li>
 				<li>
-					<h2>Lorem Ipsum</h2>
+					<h2>Services</h2>
 					<ul>
-						<li><a href="#">Fusce dui neque fringilla</a></li>
-						<li><a href="#">Eget tempor eget nonummy</a></li>
-						<li><a href="#">Magna lacus bibendum mauris</a></li>
-						<li><a href="#">Nec metus sed donec</a></li>
-						<li><a href="#">Magna lacus bibendum mauris</a></li>
-						<li><a href="#">Velit semper nisi molestie</a></li>
-						<li><a href="#">Eget tempor eget nonummy</a></li>
+						<li><a href="#">MAC & PC</a></li>
+						<li><a href="#">Consulting</a></li>
+						<li><a href="#">Training</a></li>
+						<li><a href="#">Repairs</a></li>
+						<li><a href="#">Installations</a></li>
+						<li><a href="#">Software</a></li>
+						<li><a href="#">Hardware</a></li>
+						<li><a href="#">iPhone</a></li>
+						<li><a href="#">iPods</a></li>
+						<li><a href="#">Blackberries/SmartPhones</a></li>
+						<li><a href="#">Virus & Spyware removal</a></li>
+						<li><a href="#">Disk Optimization</a></li>
+						<li><a href="#">Computer tune-up/maintenance</a></li>
+						<li><a href="#">Backup Strategies</a></li>
 					</ul>
 				</li>
 				<li>
