Add services in the navmenu and a picture

--- a/app/views/about_us/index.html.erb
+++ b/app/views/about_us/index.html.erb
@@ -1,5 +1,9 @@
+      <%= render :partial => 'home_pages/introduction' %>
+
+<h1 align="center">
 Friendly & Patient <br />
 Based in Lexington, MA <br />
 Personal and small business<br />
 computer & technology help in<br />
 the Boston Metrowest area<br />
+</h1>
