--- a/app/views/contact_pages/index.html.erb
+++ b/app/views/contact_pages/index.html.erb
@@ -1,10 +1,13 @@
+      <%= render :partial => 'home_pages/introduction' %>
+
+
 <div class="">
-  
+<h1 align="center">  
   <b>Katherine Gorry-Hines</b> <br />
   katherine@complexitllc.com <br />
   781.879.0075 main <br />
   339.970.9464 <br />
   www.complexitllc.com <br />
   60 Chase Ave., Lexington, MA 02421
-
+</h1>
 </div>
