--- a/app/views/credits/index.html.erb
+++ b/app/views/credits/index.html.erb
@@ -1,11 +1,17 @@
 <hr />
 
+<%= render :partial => 'home_pages/introduction' %>
+
 <div id="right-column"> 
   <ul>
 
 
     <li>  <img src="/images/tick.png" />
-      Copyright (c) <%=Time.now.strftime("%Y") %>  ACMMCA. All rights reserved. Developed by <a href="http://chasmaninfo.heroku.com"> Charles Magid.   </a>  In conjunction with Complex IT LLC using all open source tools.
+      Copyright (c) <%=Time.now.strftime("%Y") %>  ACMMCA. All rights reserved. Developed by 
+      <!-- <a href="http://chasmaninfo.heroku.com"> Charles Magid.   </a>   -->
+      <a href="http://sites.google.com/site/charlesmagidrubyonrailsexprenc/"> Charles Magid.   </a>  
+
+      In conjunction with Complex IT LLC using all open source tools.
 
     </li>
 
@@ -39,6 +45,11 @@
     <li><img src="/images/tick.png" />
       <a href="git://github.com/ahe/2dc_jqgrid.git"> <b>2DConcepts</b> - <u>jQuery datagrids gem</u> </a>This plugin allows you to add jQuery datagrids very easily to your Rails applications. 
     </li>
+
+    <li><img src="/images/tick.png" />
+      <a href="http://www.gnu.org/software/emacs/"> <b>GNU Emacs</b> </a>
+    </li>
+
 
 
 
