--- a/app/views/home_pages/index.html.erb
+++ b/app/views/home_pages/index.html.erb
@@ -1,22 +1,16 @@
-<h1>Listing home_pages</h1>
 
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Body</th>
-  </tr>
-
-<% @home_pages.each do |home_page| %>
-  <tr>
-    <td><%=h home_page.title %></td>
-    <td><%=h home_page.body %></td>
-    <td><%= link_to 'Show', home_page %></td>
-    <td><%= link_to 'Edit', edit_home_page_path(home_page) %></td>
-    <td><%= link_to 'Destroy', home_page, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New home_page', new_home_page_path %>
+      <!-- place in view -->
+      <%= render :partial => 'introduction' %>
+      
+      <!-- place in layout -->
+      <!-- <#%#= yield :menu_data #%#> -->
+      <center>
+	<img src="/images/mac-vs-pc.jpg" class="" alt="" />
+      </center>
+      <!-- place in view -->
+      <!-- <#%# content_for :body_data do #%#> -->
+	
+      <!-- <#%# end #%#> -->
+      
+      <!-- place in layout -->
+      <!-- <#%#= yield :body_data #%#> -->
